[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/MeatMan.png" type="Texture" id=1]
[ext_resource path="res://sprites/BossBarCircleProgress.png" type="Texture" id=2]
[ext_resource path="res://sprites/BossBarCircleUnder.png" type="Texture" id=3]
[ext_resource path="res://LinkText.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/BossBar.gd" type="Script" id=5]

[node name="BossBar" type="TextureProgress"]
margin_left = 903.0
margin_top = 17.0
margin_right = 935.0
margin_bottom = 49.0
rect_scale = Vector2( 3, 3 )
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 8
radial_initial_angle = 180.0
script = ExtResource( 5 )

[node name="HealthLabel" type="Label" parent="."]
margin_left = -56.0
margin_top = 33.0
margin_right = 424.0
margin_bottom = 63.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 4 )
text = "2000/2000"
align = 1

[node name="NameLabel" type="Label" parent="."]
margin_left = -144.5
margin_top = 11.5
margin_right = 335.5
margin_bottom = 41.5
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 4 )
text = "clog the devourer"
align = 2

[node name="Background" type="Polygon2D" parent="."]
show_behind_parent = true
color = Color( 0.129412, 0.0980392, 0.141176, 1 )
polygon = PoolVector2Array( 16.5, 3, 7.5, 5.5, 2.5, 16.5, 4.5, 23, 9.5, 28, 18, 29.5, 24, 26.5, 27.5, 22, 29.5, 14.5, 27.5, 9, 19.5, 3.5 )

[node name="BossIcon" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
